--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.59.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
